Grace/tests/gibbs/errors/t155.grace
// ERROR = P1018
if (.) then {
}
